cosmetic changes and reference updates

--- a/crs.sty
+++ b/crs.sty
@@ -6,9 +6,9 @@
 %-----------------------------
 
 %-------------------------%
-% 		 for Asymptote 
+% 		 for Asymptote
 %-------------------------%
-\usepackage[inline]{asymptote}
+%\usepackage[inline]{asymptote}
 
 %-------------------------%
 % from lerman.tex
@@ -46,7 +46,7 @@
 %\newtheorem{notation}[equation]{Notation}
 %\newtheorem {empt}[equation]      {}
 
-\numberwithin{equation}{subsection}
+%\numberwithin{equation}{subsection}
 
 % Fraktur
 
@@ -153,7 +153,7 @@
 %\theoremstyle{lemma}
 %\newtheorem{lemma}{Lemma}
 
-\numberwithin{equation}{subsection}
+%\numberwithin{equation}{subsection}
 
 % Macros
 %
