--- a/tex/intuition.tex
+++ b/tex/intuition.tex
@@ -1,4 +1,5 @@
-An intuitive picture to which one can anchor intuition when thinking in category theoretic terms is presented in Figure \ref{fig:intextdiag}. In category theory, one can always consider the duality between the intrinsic structure of \emph{objects} and the manner in which that intrinsic structure can be expressed externally in terms of patterns of constraints placed upon the relationships between \emph{morphisms} among objects.
+%!TEX root = ../plos_template.tex
+An intuitive picture to which one can anchor intuition when thinking in category theoretic terms is presented in \ref{fig:intextdiag}. In category theory, one can always consider the duality between the intrinsic structure of \emph{objects} and the manner in which that intrinsic structure can be expressed externally in terms of patterns of constraints placed upon the relationships between \emph{morphisms} among objects.
 
 \begin{figure}
 \begin{center}
